Fix elements overlapping in style.css

--- a/style.css
+++ b/style.css
@@ -363,7 +363,6 @@ html * {
     position: static;
     width: 295px;
     height: 76px;
-    margin-left: 16px;
     margin-top: 12px;
     font-family: Poppins, sans-serif;
     font-style: normal;
@@ -381,7 +380,6 @@ html * {
     position: static;
     width: 239px;
     height: 28px;
-    margin-left: 12px;
     top: 180px;
     justify-content: space-between;
   }
@@ -428,14 +426,8 @@ html * {
     font-weight: 500;
   }
 
-  .p-proj {
-    font-family: Poppins, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 24px;
-    color: #3a6ff2;
-    text-decoration: none;
+  .p-button {
+    margin-left: 0;
   }
 
   .card3 {
@@ -449,6 +441,10 @@ html * {
     margin-left: 24px;
     margin-top: 114px;
     margin-right: 24px;
+  }
+
+  .card3 .p-button {
+    margin-top: 10px;
   }
 
   .a-head {
@@ -710,6 +706,18 @@ html * {
   }
 
   .desktop {
+    display: none;
+  }
+
+  .framed {
+    display: none;
+  }
+
+  .p-textd {
+    display: none;
+  }
+
+  .portfolio-head2d {
     display: none;
   }
 }
